Internal change
PiperOrigin-RevId: 620175445